frontend/src/layouts/Header/Header.css
header {
    display: flex;
    align-items: center;
    background-color: #FFFFFF;
    height: 64px;
    justify-content: space-between;
    padding: 0 80px;
}
 
header > nav {
    display: flex;
    align-items: center;
}
 
header > nav > a {
    color: var(--quaternary-color);
    text-decoration: none;
    font-size: 14px;
    font-weight: 600;
    margin: 0 16px;
    font-family: var(--font-base);
}

.link-inside-button {
    color: #FFFFFF;
    text-decoration-line: none;
}

.button {
    min-width: 125px;
}

@media (max-width: 768px){
    .navigation {
        display: none;
    }
}

@media (max-width: 650px) {
    header {
        justify-content: center;
        gap: 30px;
    }
    
    .button {
        font-size: 0.7rem;
    }
}

@media (max-width: 425px) {
    .button {
        display: none;
    }
}

